# SigLoMa-Code

./: .gitignore  LICENSE  README.md  pyproject.toml
SigLoMaGym/: .gitignore  setup.py
SigLoMaGym/controller/: model_light.jit
SigLoMaGym/legged_gym/envs/: __init__.py
SigLoMaGym/legged_gym/perception/: __init__.py  perception_utils.py  surface_geometry.py  tracker.py  ycb_geometry.py
SigLoMaGym/legged_gym/scripts/: play.py  train.py
SigLoMaGym/legged_gym/utils/: __init__.py  camera_sensor.py  helpers.py  task_registry.py  terrain.py  torch_math.py  visualization.py
SigLoMaGym/obj_set/blue_cup/: point_cloud.pt
SigLoMaGym/obj_set/blue_tea_box/: point_cloud.pt
SigLoMaGym/obj_set/bowl/: point_cloud.pt
SigLoMaGym/obj_set/cleanser/: point_cloud.pt
SigLoMaGym/obj_set/clear_box/: point_cloud.pt
SigLoMaGym/obj_set/conditioner/: point_cloud.pt
SigLoMaGym/obj_set/doraemon_bowl/: point_cloud.pt
SigLoMaGym/obj_set/glue_2/: point_cloud.pt
SigLoMaGym/obj_set/green_bowl/: point_cloud.pt
SigLoMaGym/obj_set/green_cup/: point_cloud.pt
SigLoMaGym/obj_set/lipton_tea/: point_cloud.pt
SigLoMaGym/obj_set/mug/: point_cloud.pt
SigLoMaGym/obj_set/orange_cup/: point_cloud.pt
SigLoMaGym/obj_set/pink_tea_box/: point_cloud.pt
SigLoMaGym/obj_set/plastic_apple/: point_cloud.pt
SigLoMaGym/obj_set/plastic_banana/: point_cloud.pt
SigLoMaGym/obj_set/plastic_lemon/: point_cloud.pt
configs/: play.example.yaml  train.example.yaml
docs/: deployment.md  hardware.md  repositories.md  training.md
scripts/: play.py  train.py
sigloma_code/: __init__.py
(+40 files in other folders)
