[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigloma-code"
version = "0.1.0"
description = "Public entry repository for the SigLoMa training and deployment workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "11chens" }
]
keywords = ["ros2", "robotics", "vlm", "deployment", "isaacgym"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Robotics"
]

[tool.setuptools.packages.find]
include = ["sigloma_code*"]
